=== HEAD

* Handle composite primary keys when working around validation issues for one_to_(one|many) associations in nested_attributes plugin (jeremyevans) (#870)

* Recognize additional disconnect error in jdbc/jtds adapter (jeremyevans)

* Have association_join work with existing model selections (jeremyevans)

* Fix regression in class_table_inheritance plugin when lazily loading column in middle table (jeremyevans) (#862)

* Add cache_key_prefix method to caching plugin, which can be overridden for custom handling (pete) (#861)

* Add :when option to PostgreSQL create_trigger method, for adding a filter to the trigger (aschrab) (#860)

* Recognize an additional serialization failure on PostgreSQL (tmtm) (#857)

=== 4.13.0 (2014-08-01)

* Use copy constructors instead of overriding Model#dup and #clone (ged, jeremyevans) (#852)

* Fix handling of MySQL create_table foreign_key calls using :key option (mimperatore, jeremyevans) (#850)

* Handle another disconnection error in the postgres adapter (lbosque) (#848)

* Make list plugin update remaining positions after destroying an instance (ehq, jeremyevans) (#847)

* Unalias aliased tables in Dataset#insert (jeremyevans)

* Add insert_returning_select plugin, for setting up RETURNING for inserts for models selecting explicit columns (jeremyevans)

* Make Model#save use insert_select if the dataset used for inserting already uses returning (jeremyevans)

* Add Dataset#unqualified_column_for helper method, returning unqualified version of possibly qualified column (jeremyevans)

* Calling Dataset#returning when the Database does not support or emulate RETURNING now raises an Error (jeremyevans)

* Emulate RETURNING on Microsoft SQL Server using OUTPUT, as long as only simple column references are used (jeremyevans)

* Switch class_table_inheritance plugin to use JOIN ON instead of JOIN USING (jeremyevans)
