@@ -1,5 +1,7 @@
 === HEAD
 
+* Remove objects from cached association array at time of nested_attributes call instead of waiting until save (jeremyevans)
+
 * Handle composite primary keys when working around validation issues for one_to_(one|many) associations in nested_attributes plugin (jeremyevans) (#870)
 
 * Recognize additional disconnect error in jdbc/jtds adapter (jeremyevans)
